--- a/website/package.json
+++ b/website/package.json
@@ -6,18 +6,15 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel public/index.html --open",
-    "build": "parcel build public/index.html",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "tsc --noEmit --watch"
+    "build": "parcel build public/index.html"
   },
   "dependencies": {
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "react-spring": "9.0.0-beta.3",
+    "react-use-gesture": "5.0.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "parcel-bundler": "^1.10.3",
-    "typescript": "^4.1.3"
+    "parcel-bundler": "^1.10.3"
   }
 }
